--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^3.4.1",
+    "bootstrap-icons": "^1.5.0",
     "dotenv": "^10.0.0",
     "google-map-react": "^2.1.10",
     "react": "^17.0.2",
